# arti-git

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md
examples/: lfs_ipfs_simple.rs  lfs_ipfs_test.rs
src/: lib.rs  main.rs  progress.rs
src/commands/: add.rs  clone.rs  commit.rs  init.rs  mod.rs  pull.rs  push.rs  status.rs
src/core/: client.rs  config.rs  error.rs  mod.rs  object.rs  operations.rs
src/crypto/: identity.rs  keys.rs  mod.rs  signing.rs
src/ipfs/: client.rs  config.rs  mod.rs  storage.rs
src/lfs/: client.rs  commands.rs  config.rs  filter.rs  mod.rs  pointer.rs  server.rs  storage.rs
src/protocol/: git_protocol.rs  mod.rs  negotiate.rs  pack.rs  receive_pack.rs  refs.rs  upload_pack.rs
src/repository/: commit.rs  config.rs  mod.rs  refs.rs  storage.rs
src/service/: mod.rs
src/transport/: gix_tor.rs  http.rs  mod.rs  registry.rs  tor.rs
src/utils/: mod.rs  path.rs
tests/: integration_tests.rs
