[package]
name = "arti-git"
version = "0.1.0"
edition = "2021"
description = "Decentralized, anonymous Git infrastructure using Arti and gitoxide"
authors = ["ArtiGit Team"]

[dependencies]
# Core Git functionality from gitoxide
gix = "0.42.0"          # High-level Git interface
gix-protocol = "0.26.3" # For Git protocol implementation
gix-transport = "0.25.4"# For Git transport protocols
gix-url = "0.13.2"      # For Git URL handling
gix-config = "0.16.2"   # For Git configuration

# Core functionality
bytes = "1.4.0"
thiserror = "1.0.40"
hex = "0.4.3"
sha1 = "0.10.5"
flate2 = "1.0.25"
tempfile = "3.5.0"
chrono = "0.4.24"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# For CLI interface
clap = { version = "4.2.4", features = ["derive"] }

# Configuration handling
config = "0.13.3"
dirs = "5.0.1"

# Will be used later for API integrations
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"

# Networking and HTTP
reqwest = { version = "0.11.20", features = ["json", "stream", "blocking"] }
url = "2.4.0"
futures = "0.3.28"

# Arti (Tor) integration
arti-client = { version = "0.9.0", features = ["full"] }
tor-rtcompat = { version = "0.9.0", features = ["tokio"] }

# Cryptographic primitives for secure object signing
ed25519-dalek = "1.0.1"
rand = "0.7.3"
base64 = "0.21.0"

# IPFS integration
ipfs-api-backend-hyper = "0.6.0"  # IPFS HTTP API client
home = "0.5.4"                     # For resolving home directory

[dev-dependencies]
rstest = "0.17.0"
assert_fs = "1.0.13"
tokio-test = "0.4.2"
