[package]
name = "arti-git"
version = "0.1.0"
edition = "2021"
description = "Decentralized, anonymous Git infrastructure using Arti and gitoxide"
authors = ["ArtiGit Team"]

[features]
default = ["ipfs"]
tor = ["arti-client", "tor-rtcompat"]
ipfs = ["ipfs-api-backend-hyper"]

[dependencies]
# Core Git functionality from gitoxide - using stable matching versions
gix = "0.54.0"
gix-protocol = "0.36.0" 
gix-transport = "0.35.0"
gix-url = "0.23.0"  # Keep original version
gix-config = "0.29.0"

# Core functionality
bytes = "1.4.0"
thiserror = "1.0.40"
hex = "0.4.3"
sha1 = "0.10.5"
flate2 = "1.0.25"
tempfile = "3.5.0"
chrono = "0.4.24"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# For CLI interface
clap = { version = "4.2.4", features = ["derive"] }

# Configuration handling
config = "0.13.3"
dirs = "5.0.1"

# Will be used later for API integrations
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"

# Networking and HTTP
reqwest = { version = "0.11.20", features = ["json", "stream", "blocking", "multipart"] }
hyper = { version = "0.14", features = ["full"] }
url = "2.4.0"
futures = "0.3.28"

# Arti (Tor) integration - making it optional
arti-client = { version = "0.8.0", optional = true }
tor-rtcompat = { version = "0.8.0", optional = true }

# Cryptographic primitives for secure object signing
ed25519-dalek = "1.0.1"
rand = "0.7.3"
base64 = "0.21.0"

# Thread synchronization primitives
parking_lot = "0.12.1"

# Traits for async
async-trait = "0.1.68"

# IPFS integration
ipfs-api-backend-hyper = { version = "0.6.0", optional = true }  # IPFS HTTP API client
home = "0.5.4"                     # For resolving home directory

[dev-dependencies]
rstest = "0.17.0"
assert_fs = "1.0.13"
tokio-test = "0.4.2"

[patch.crates-io]
gix-url = { path = "/workspaces/codespaces-blank/patched-deps/gix-url" }
